0.1.0
- Opens WhatsApp Web in Electron using electron-prebuild
0.1.1
- Replaced electron-prebuild with electron
- External URLs now open in Default Browser instead of a new Electron Window
- Fixed a Bug in which WhatsApp was unable to recognozied the version of Chrome (pull request #7) (contributor: Carpediem94)
- Removed Default Menubar
0.1.2
- Updated Electron to latest version (v5.0.0)
- Added Confirmation Notification for "Desktop Notification Enabled"
- Added Network Connectivity Checker
- Ready to release v0.1.2
0.1.3-beta
- Reverted electron version to v4.1.5 due to a bug in electron v5.0.0
0.1.3
- Same as 0.1.3-beta
0.1.4
- Forced Single Instance of WALC