@@ -16,3 +16,4 @@
 - Same as 0.1.3-beta
 0.1.4
 - Forced Single Instance of WALC
+- Added Menus ( Window, Settings)
